--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									</div>
 									<div class="traseiro">
 									<img src="images/traseiro.png" id="carro">
-									<p>Traseira: <span id="traseiro"></span></p>
+									<p>Laterais e Traseira: <span id="traseiro"></span></p>
 									</div>
 									<div class="tetosolar">
 									<img src="images/tetosolar.png" id="carro">
