Added hyphen to the word windshield

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								  <div class="results">
 									<div class="parabrisa">
 									<img src="images/parabrisa.png" id="carro">
-									<p>Parabrisa: <span id="parabrisa"></span></p>
+									<p>Para-brisa: <span id="parabrisa"></span></p>
 									</div>
 									<div class="traseiro">
 									<img src="images/traseiro.png" id="carro">
